2014-03-27  Richard Frith-Macdonald <rfm@gnu.org>

        * TestFramework/ObjectTesting.h: Add PASS_MATCH macro for matching
	against a regular expresssion.

2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile.in:
	Fix a couple more hardcoded 'make' calls.
	* Instance/resource-set.make:
	* Instance/Shared/bundle.make:
	Try to get xxx_RESOURCE_DIR woreking consistently for all resources.

2014-01-12  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* config.make.in, GNUmakefile.in:
	Do not hardcode "make". It already gets detected via configure,
	so use the found name, especially on *BSD systems where its called
        gmake

2014-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile.in: Implement Sebastian's suggestions for make targets
	to build/install documentation with or without gnustep-make as a
	convenience for packagers.
	* Documentation/GNUmakefile: Use uninstalled gnustep-make from
	enclosing directory if available ... based on idea by Niels and
	code/comments by Markus.

2014-01-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/Documentation/texi.make:
	Revert change from 2009-09-19 since texi2html now seems to be
	behaving as expected.  However, attempt to move any html files
	from the subdirectory in case we are using a version which still
	puts them there.

2014-01-06  Richard Frith-Macdonald <rfm@gnu.org>

	* INSTALL:
	* Documentation/GNUmakefile:
	Make it clearer (ie very explicit) that you need to install
	gnustep-make in order to install documentation.

2013-12-25 Fred Kiefer <FredKiefer@gmx.de>

	* Instance/rules.make: Add detection for different forms of
	the Info.plist.
	* Instance/application.make,
	* Instance/bundle.make,
	* Instance/framework.make,
	* Instance/gswapp.make,
	* Instance/palette.make,
	* Instance/service.make: Use GNUSTEP_PLIST_DEPEND directly.

2013-12-25 Fred Kiefer <FredKiefer@gmx.de>

	* config.make.in: Use the correct CXX compiler. Fixes bug #36722.