@@ -223,7 +223,7 @@ install: generated-files
 	   $(INSTALL_PROGRAM) -m 755 "$(srcdir)/java-executable.template" "$(makedir)"; \
 	   $(INSTALL_PROGRAM) -m 755 executable.template "$(makedir)"; \
 	   $(INSTALL_DATA) "$(srcdir)/nsi-app.template" "$(makedir)"; \
-	   $(INSTALL_DATA) "$(srcdir)/deb-equivs-control.template" "$(makedir)"; \
+	   $(INSTALL_DATA) -m 755 "$(srcdir)/bake_debian_files.sh" "$(makedir)"; \
 	   $(INSTALL_DATA) config-noarch.make "$(makedir)"; \
 	   $(INSTALL_DATA) filesystem.make "$(makedir)"; \
 	   $(INSTALL_DATA) config.make "$(makedir)/$(GNUSTEP_TARGET_LDIR)")
@@ -301,7 +301,7 @@ uninstall:
 	rm -f "$(makedir)/app-wrapper.template"
 	rm -f "$(makedir)/java-executable.template"
 	rm -f "$(makedir)/nsi-app.template"
-	rm -f "$(makedir)/deb-equivs-control.template"
+	rm -f "$(makedir)/bake_debian_files.sh"
 	rm -f "$(GNUSTEP_SYSTEM_ROOT)/share/config.site"
 	rm -f "$(makedir)/config-noarch.make"
 	rm -f "$(makedir)/filesystem.make"
@@ -334,6 +334,7 @@ distclean: clean
 	rm -f filesystem.make filesystem.sh filesystem.csh
 	rm -f gnustep-make.spec GNUstep.conf GNUstep-strict-v2.conf
 	rm -f config-precomp-test.out config-precomp-test.h.gch config-precomp-test.log
+	rm -f debian_dist/
 
 docs:
 	(cd Documentation; $(MAKE))
@@ -362,6 +363,15 @@ svn-snapshot:
 	  gnustep-make-$(GNUSTEP_MAKE_VERSION)
 	tar --gzip -cf gnustep-make-$(GNUSTEP_MAKE_VERSION).tar.gz gnustep-make-$(GNUSTEP_MAKE_VERSION)
 	rm -rf gnustep-make-$(GNUSTEP_MAKE_VERSION)
+
+svn-export:
+	@echo Note: any local changes are included.
+	svn export . \
+	  gnustep-make-$(GNUSTEP_MAKE_VERSION)
+	tar --gzip -cf gnustep-make-$(GNUSTEP_MAKE_VERSION).tar.gz gnustep-make-$(GNUSTEP_MAKE_VERSION)
+	rm -rf gnustep-make-$(GNUSTEP_MAKE_VERSION)
+
+dist: svn-export
 
 cvs-tag:
 	cvs -z3 rtag make-$(VERTAG) make
@@ -405,30 +415,17 @@ rpm: test-RPM_TOPDIR svn-dist
 	fi; \
 	$${rpmbuild} -ba gnustep-make.spec
 
-deb: gnustep-make_$(GNUSTEP_MAKE_VERSION)_all.deb
+deb: debian_dist/gnustep-make_$(GNUSTEP_MAKE_VERSION)_all.deb
 
-gnustep-make_$(GNUSTEP_MAKE_VERSION)_all.deb: gnustep-make.debequivs
-	equivs-build gnustep-make.debequivs
-	-rm gnustep-make.debequivs
-
-gnustep-make.debequivs:
-	-rm -rf /tmp/gsmake-deb
-	make install DESTDIR=/tmp/gsmake-deb
-	deb_infile=deb-equivs-control.template ;		\
-	DEB_DOMAIN=System ;					\
-	DEB_LOWERCASE_PACKAGE_NAME=gnustep-make ;		\
-	PACKAGE_VERSION=$(GNUSTEP_MAKE_VERSION) ;		\
-	DEB_ARCHITECTURE=all ;					\
-	GNUSTEP_FILE_LIST=/tmp/gsmake-deb.list ;		\
-	echo -n 'Files:' > $${GNUSTEP_FILE_LIST} ; \
-	find /tmp/gsmake-deb -type l -or -type f | sed 's,/tmp/gsmake-deb\(.*\)/\(.*\), /tmp/gsmake-deb\1/\2 \1,' >> $${GNUSTEP_FILE_LIST} ;	\
-	sed -e :t						\
-	    -e "s,@gs_domain@,$${DEB_DOMAIN},;t t"		\
-	    -e "s,@gs_name@,$${DEB_LOWERCASE_PACKAGE_NAME},;t t" \
-	    -e "s,@gs_version@,$${PACKAGE_VERSION},;t t"	\
-	    -e "s,@gs_arch@,$${DEB_ARCHITECTURE},;t t"		\
-	    -e "/@file_list@/{ r $${GNUSTEP_FILE_LIST}" -e "d}"	\
-		$$deb_infile > gnustep-make.debequivs
+debian_dist/gnustep-make_$(GNUSTEP_MAKE_VERSION)_all.deb: dist
+	-rm -rf debian_dist
+	mkdir -p debian_dist
+	cp gnustep-make-$(GNUSTEP_MAKE_VERSION).tar.gz debian_dist/gnustep-make_$(GNUSTEP_MAKE_VERSION).orig.tar.gz
+	cd debian_dist && tar xfz gnustep-make_$(GNUSTEP_MAKE_VERSION).orig.tar.gz
+	PACKAGE_NAME="gnustep-make" VERSION=$(GNUSTEP_MAKE_VERSION) DEB_MAINTAINER="GNUstep Developers <gnustep-dev@gnu.org>" DEB_ARCHITECTURE=all /bin/bash bake_debian_files.sh debian_dist/gnustep-make-$(GNUSTEP_MAKE_VERSION)/
+	printf "\noverride_dh_auto_configure:\n\tdh_auto_configure -- $(DEB_CONFIGURE_FLAGS)\n" >> debian_dist/gnustep-make-$(GNUSTEP_MAKE_VERSION)/debian/rules
+	cd debian_dist/gnustep-make-$(GNUSTEP_MAKE_VERSION)/ && debuild -us -uc
+	# rm -rf debian_dist/gnustep-make-$(GNUSTEP_MAKE_VERSION)
 
 generated-files: GNUmakefile GNUstep.sh GNUstep.csh fixpath.sh config-noarch.make config.make \
                  openapp opentool gnustep-make.spec executable.template gnustep-config \
